<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dialog_colors"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_5sdp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:text="@string/addPlayList"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/title"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp"

                />

            <EditText
                android:id="@+id/addNewPlayListDialog_ET_listName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:theme="@style/GrayET" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addNewPlayListDialog_btn_Cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:theme="@style/GrayButton" />

                <Button
                    android:id="@+id/addNewPlayListDialog_btn_OK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/craete"
                    android:textColor="@color/white"
                    android:theme="@style/GrayButton"
                    />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>