<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/downloadInfoBottomSheet_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:background="#000000">

        <TextView
            android:id="@+id/downloadInfoBottomSheet_txtSelectedTracksCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/selected_item"
            android:textColor="@color/white_gray"
            android:textSize="@dimen/_17sdp" />

        <TextView
            android:id="@+id/downloadInfoBottomSheet_txtStorageAvailability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/downloadInfoBottomSheet_txtSelectedTracksCount"
            android:gravity="center"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/storageSpace"
            android:textColor="#DFDEDE" />

        <TextView
            android:id="@+id/downloadInfoBottomSheet_txtStoragePath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/downloadInfoBottomSheet_txtStorageAvailability"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="start"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/storagePath"
            android:textColor="#DFDEDE" />

        <include
            android:id="@+id/downloadInfoBottomSheet_trackInfo"
            layout="@layout/current_tracktodownload_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/downloadInfoBottomSheet_txtStoragePath"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"

            android:layout_marginTop="@dimen/_10sdp" />

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/downloadInfoBottomSheet_layoutConstraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/downloadInfoBottomSheet_trackInfo"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/downloadInfoBottomSheet_circularImage"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:src="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_music_note_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/downloadInfoBottomSheet_txtMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/downloadInfoBottomSheet_layoutConstraint"
            android:layout_alignBottom="@id/downloadInfoBottomSheet_layoutConstraint"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="-5dp"
            android:layout_toEndOf="@id/downloadInfoBottomSheet_layoutConstraint"
            android:text="@string/music"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/downloadInfoBottomSheet_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/downloadInfoBottomSheet_txtMusic"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            tools:listitem="@layout/recycler_view_item_track_info" />

        <Button
            android:id="@+id/downloadInfoBottomSheet_btnStartDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/downloadInfoBottomSheet_recyclerView"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:drawableStart="@drawable/ic_baseline_arrow_downward_24"
            android:text="@string/startDownload"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:theme="@style/GrayButton" />

    </RelativeLayout>
</layout>