<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        tools:context=".fragments.PlayListPreviewFragment">

        <ImageView
            android:id="@+id/playListPreviewFragment_btnBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <androidx.cardview.widget.CardView
                android:id="@+id/playListPreviewFragment_cardView"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_160sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_6sdp">

                <ImageView
                    android:id="@+id/playListPreviewFragment_imagViewPlayListImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/demmo_profile" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/playListPreviewFragment_TV_playListName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_toEndOf="@id/playListPreviewFragment_cardView"
                android:fontFamily="@font/roboto"
                android:maxLines="3"
                android:padding="@dimen/_8sdp"
                android:text="@string/dummySongName"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/playListPreviewFragment_TV_playListPublishDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/playListPreviewFragment_TV_playListName"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toEndOf="@id/playListPreviewFragment_cardView"
                android:maxLines="3"
                android:paddingStart="@dimen/_8sdp"
                android:text="publish: 2019"
                android:textColor="@color/white_gray"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/playListPreviewFragment_TV_playListPublishDate"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_toEndOf="@id/playListPreviewFragment_cardView"


                >

                <ImageView
                    android:id="@+id/playListPreviewFragment_ImageAddCurrentPlayList"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:src="@drawable/ic_baseline_library_add_24"
                    android:background="?actionBarItemBackground"
                    app:tint="@color/white_gray" />

                <ImageView
                    android:id="@+id/playListPreviewFragment_ImageDownload"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:visibility="gone"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:src="@drawable/ic_baseline_arrow_downward_24"
                    android:background="?actionBarItemBackground"
                    app:tint="@color/white_gray" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_10sdp">


            <Button
                android:id="@+id/playListPreviewFragment_btnPlayAllList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/custome_white_button"
                android:drawableLeft="@drawable/ic_baseline_play_arrow_24"
                android:drawableTint="@color/black"
                android:text="@string/playAll"
                android:textColor="@color/black"
                android:theme="@style/WhiteButton" />

            <Button
                android:id="@+id/playListPreviewFragment_btnPlayShuffle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/custome_black_button_white_border"
                android:drawableLeft="@drawable/ic_shuffle_icon"
                android:text="@string/shuffle"
                android:textColor="@color/white"
                android:theme="@style/BlackButton"

                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playListPreviewFragment_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/_10sdp"
            tools:listitem="@layout/recycler_view_item_list_of_videos_in_play_list"

            />

    </LinearLayout>
</layout>